[project]
name = "arma3-offline-map-lib"
version = "0.4.1"
description = "Code shared between Arma 3 mapping projects."
readme = "README.md"
authors = [
    { name = "recreational-projects", email = "205627218+recreational-projects@users.noreply.github.com" }
]
urls = { "source" = "https://github.com/recreational-projects/arma3-offline-map-lib" }
requires-python = ">=3.12"
dependencies = [
    "attrs>=26.1.0",
    "msgspec>=0.21.1",
    "numpy>=2.4.4",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff.lint]
future-annotations = true
select = ["ALL"]

ignore = [
    "COM812", # missing-trailing-comma: conflicts with formatter
]
extend-safe-fixes = [
    "TC", # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101", # assert
]

[tool.ruff.lint.pydocstyle]
convention = "google"
